# vehicle-insurance-churn

./: .gitignore  Dockerfile  README.md  app.py  demo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: aws.yaml
notebook/: experiment.ipynb  mongo.ipynb
notebook/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
notebook/catboost_info/test/: events.out.tfevents
src/: .gitignore
src/cloud_storage/: aws_storage.py
src/components/: model_trainer.py
src/constants/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/pipline/: training_pipeline.py
static/css/: style.css
templates/: vehicledata.html
