[project]
name = "src"
version = "0.0.1"
description = "MLOps Project"
authors = [
    { name = "Rohit Kumar", email = "rohitkr7518@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
